# Lilica

./: .gitignore  CMakeLists.txt  LICENSE  README.md  script.lua
src/: gui_manager.cpp  gui_manager.h  imgui_binding.cpp  imgui_binding.h  lua_helper.cpp  lua_helper.h  main.cpp
